# ethio-european-date-converter

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc.json  .travis.yml  .yarnrc  Dockerfile  Form1.Designer.vb  Form1.vb  README.md  babel.config.js  bower.json  capacitor.config.ts  dateconverter.html  docker-compose.yml  eslint.config.mjs  index.html  jest-puppeteer.config.js  jest.config.js  manifest.webmanifest  netlify.toml  pack_offline.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  renovate.json  ssr-manifest.json  sw.js  tailwind.config.cjs  tailwind.config.ts  tsconfig.app.json  tsconfig.config.json  tsconfig.vitest.json  vite.config.ts  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.github/: dependabot.yml  renovate.json
.well-known/: assetlinks.json
android/: capacitor.settings.gradle
assets/: app-1e60832f.js  app-7cc80f14.js  index-7274410b.css  index-95c5e6dd.css  pwa-4501c027.js
css/: dateconverter.css
desktop/: package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
e2e/: playwright.test.ts  tsconfig.json
js/: dateconverter.js
mobile/: capacitor.config.ts  docker-compose.yml  package.json
public/: _headers  ads.txt  humans.txt  manifest.webmanifest
public_html/: .cache  dateconverter.html  index.html  service-worker.js
public_html_temp/: precache-manifest.73769c7f16f430cf42197ef541cdf6f7.js  service-worker.js
src/: App.vue  humans.txt  index.html  main.js  main.ts  vite-env.d.ts  (+1 more)
(+94 files in other folders)
