[package]
name = "ethiopian-calendar-converter"
version = "4.2.2"
description = "A Tauri App"
authors = ["Melaku Z"]
license = "MIT"
repository = "https://github.com/melaku-z/ethio-european-date-converter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ethiopian_calendar_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2.6.1", features = [] }
tauri-plugin-shell = "2.3.0"
